--- a/swablu/tpl/listing.html
+++ b/swablu/tpl/listing.html
@@ -32,10 +32,10 @@
                         allowfullscreen></iframe>
             </div></div>
         {% end %}
-        {% if hack['screenshot1'] %}
+        {% if hack['screenshot1'] is not None and hack['screenshot1'] != 'None' %}
             <div><div class="screenshot"><img src="{{ hack['screenshot1'] }}"></div></div>
         {% end %}
-        {% if hack['screenshot2'] %}
+        {% if hack['screenshot2'] is not None and hack['screenshot2'] != 'None' %}
             <div><div class="screenshot"><img src="{{ hack['screenshot2'] }}"></div></div>
         {% end %}
     </div>
