--- a/swablu/tpl/foot.html
+++ b/swablu/tpl/foot.html
@@ -1,4 +1,11 @@
 </div>
 </div>
+<div class="foot">
+    <ul class="link-list">
+        <li><a href="https://skytemple.org">SkyTemple</a></li>
+        <li><a href="https://discord.gg/skytemple">Discord Server</a></li>
+        <li><a href="http://sprites.pmdcollab.org/">Sprite Repository</a></li>
+    </ul>
+</div>
 </body>
 </html>
