--- a/swablu/tpl/jam.html
+++ b/swablu/tpl/jam.html
@@ -15,7 +15,7 @@
     {% if 'awards' in jam %}
     <h2>Winners</h2>
     <div class="hack-list">
-        {% for hack_key in winners %}
+        {% for sort_idx, hack_key in enumerate(winners) %}
             {% set hack = hackdata[hack_key] %}
             {% set key = hack_key %}
             {% set jury = jam['hacks'][hack_key] %}
@@ -37,7 +37,7 @@
         {% end %}
     {% end %}
     <div class="hack-list">
-        {% for hack_key in others %}
+        {% for sort_idx, hack_key in enumerate(others) %}
             {% set hack = hackdata[hack_key] %}
             {% set key = hack_key %}
             {% set jury = jam['hacks'][hack_key] %}
@@ -49,7 +49,7 @@
     <h2>Disqualified</h2>
     <p class="sub">These hacks were disqualified for various reasons. We still want to show them to you!</p>
     <div class="hack-list">
-        {% for hack_data in jam['dq'] %}
+        {% for sort_idx, hack_data in enumerate(jam['dq']) %}
             {% set hack = hack_data %}
             {% set key = None %}
             {% set jury = hack_data['jury'] %}
