Varnish support for backend caching

--- a/swablu/tpl/hack_entry.html
+++ b/swablu/tpl/hack_entry.html
@@ -33,10 +33,10 @@
             </div></div>
         {% end %}
         {% if hack['screenshot1'] is not None and hack['screenshot1'] != 'None' %}
-            <div><div class="screenshot"><img src="{{ hack['screenshot1'] }}"></div></div>
+            <div><div class="screenshot"><img src="/himg/{{ hack["key"] }}/1.png"></div></div>
         {% end %}
         {% if hack['screenshot2'] is not None and hack['screenshot2'] != 'None' %}
-            <div><div class="screenshot"><img src="{{ hack['screenshot2'] }}"></div></div>
+            <div><div class="screenshot"><img src="/himg/{{ hack["key"] }}/2.png"></div></div>
         {% end %}
     </div>
 </div>
