--- a/swablu/tpl/points.html
+++ b/swablu/tpl/points.html
@@ -10,7 +10,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for pos, name, points in all_points %}
+            {% for pos, _, name, points in all_points %}
             <tr>
                 <td>#{{ pos }}</td>
                 <td>{{ name }}</td>
