Update hack URL in hack edit form

--- a/swablu/tpl/edit-form.html
+++ b/swablu/tpl/edit-form.html
@@ -1,7 +1,7 @@
 {% include 'head.html' %}
 <h1>Edit ROM Hack</h1>
 {% if hack['message_id'] %}
-<div><span><em>Your hack micro page is reachable at <a href="https://skytemple.org/{{ hack['key'] }}">https://skytemple.org/{{ hack['key'] }}</a></em></span></div>
+<div><span><em>Your hack micro page is reachable at <a href="https://skytemple.org/h/{{ hack['key'] }}">https://skytemple.org/h/{{ hack['key'] }}</a></em></span></div>
 {% else %}
 <div class="red">
     <span>You may only submit your hack if at least one of the following is true:</span>
