--- a/swablu/tpl/jam.html
+++ b/swablu/tpl/jam.html
@@ -4,7 +4,7 @@
 <div class="hack-listing jam-details">
     <div class="jam-description">
         <p>{{ jam ["description"] }}</p>
-        <p><strong>Motto: </strong>{{ jam["motto"] }}</p>
+        <p><strong>Theme: </strong>{{ jam["motto"] }}</p>
         <p><strong>Gimmick: </strong>{{ jam["gimmick"] }}</p>
         {% if 'awards' in jam %}
         <div class="info">Want to find out more about why we decided how we did?
