--- a/swablu/tpl/edit-form.html
+++ b/swablu/tpl/edit-form.html
@@ -73,6 +73,12 @@
             <em>Link to a YouTube video to use as a trailer / the first episode of your machinima.</em>
         </label>
         <button type="submit">Save</button>
+        {% if hack['message_id'] %}
+        <label for="silent">Slient edit: <input name="silent" type="checkbox" id="silent">
+            <br>
+            <em>The hack's last modified date will not change.</em>
+        </label>
+        {% end %}
         <span><em>*: Required</em></span>
     </form>
 </div>
