Hack list: Include ongoing machinimas under "wip" as well

--- a/swablu/tpl/list.html
+++ b/swablu/tpl/list.html
@@ -15,7 +15,7 @@
         </select></label>
         <label>Status: <select name="status">
               <option value="">---</option>
-              <option value="wip">Work in Progress</option>
+              <option value="wip">Work in Progress / Ongoing</option>
               <option value="mostly">Mostly Finished / Ongoing</option>
               <option value="finished">Finished</option>
         </select></label>
