Fix broken link

--- a/swablu/tpl/jam.html
+++ b/swablu/tpl/jam.html
@@ -8,7 +8,7 @@
         <p><strong>Gimmick: </strong>{{ jam["gimmick"] }}</p>
         {% if 'awards' in jam %}
         <div class="info">Want to find out more about why we decided how we did?
-            Ask the Jury on our <a href="https://discord.gg/skytemple>">Discord</a>! Some of the Jury members also have
+            Ask the Jury on our <a href="https://discord.gg/skytemple">Discord</a>! Some of the Jury members also have
             playthroughs on their YouTube channels.</div>
         {% end %}
     </div>
