--- a/swablu/tpl/edit-form.html
+++ b/swablu/tpl/edit-form.html
@@ -69,7 +69,7 @@
             <em>Link to a YouTube video to use as a trailer / the first episode of your machinima.</em>
         </label>
         {% if hack['message_id'] %}
-        <label for="silent">Slient edit: <input name="silent" type="checkbox" id="silent">
+        <label for="silent">Silent edit: <input name="silent" type="checkbox" id="silent">
             <br>
             <em>The hack's last modified date will not change.</em>
         </label>
