Allow deleting hack screenshots

--- a/swablu/tpl/edit-form.html
+++ b/swablu/tpl/edit-form.html
@@ -69,6 +69,15 @@
             <em>Link to a YouTube video to use as a trailer / the first episode of your machinima.</em>
         </label>
         {% if hack['message_id'] %}
+        <hr>
+        <label for="delscreenshot1">Delete screenshot 1: <input name="delscreenshot1" type="checkbox" id="delscreenshot1">
+            <br>
+            <em>Check this if you want to delete the first screenshot without replacing it.</em>
+        </label>
+        <label for="delscreenshot2">Delete screenshot 2: <input name="delscreenshot2" type="checkbox" id="delscreenshot2">
+            <br>
+            <em>Check this if you want to delete the second screenshot without replacing it.</em>
+        </label>
         <label for="silent">Silent edit: <input name="silent" type="checkbox" id="silent">
             <br>
             <em>The hack's last modified date will not change.</em>
