Add Gameplay Hack hack type

--- a/swablu/tpl/edit-form.html
+++ b/swablu/tpl/edit-form.html
@@ -39,6 +39,9 @@
               <option value="balance_hack_wip" {% if hack['hack_type'] == 'balance_hack_wip' %}selected{% end %}>Balance Hack (work in progress)</option>
               <option value="balance_hack_mostly" {% if hack['hack_type'] == 'balance_hack_mostly' %}selected{% end %}>Balance Hack (mostly finished)</option>
               <option value="balance_hack" {% if hack['hack_type'] == 'balance_hack' %}selected{% end %}>Balance Hack (finished)</option>
+              <option value="gameplay_hack_wip" {% if hack['hack_type'] == 'gameplay_hack_wip' %}selected{% end %}>Gameplay Hack (work in progress)</option>
+              <option value="gameplay_hack_mostly" {% if hack['hack_type'] == 'gameplay_hack_mostly' %}selected{% end %}>Gameplay Hack (mostly finished)</option>
+              <option value="gameplay_hack" {% if hack['hack_type'] == 'gameplay_hack' %}selected{% end %}>Gameplay Hack (finished)</option>
               <option value="story_hack_wip" {% if hack['hack_type'] == 'story_hack_wip' %}selected{% end %}>Story Hack (work in progress)</option>
               <option value="story_hack_mostly" {% if hack['hack_type'] == 'story_hack_mostly' %}selected{% end %}>Story Hack (mostly finished)</option>
               <option value="story_hack" {% if hack['hack_type'] == 'story_hack' %}selected{% end %}>Story Hack (finished)</option>
