--- a/swablu/tpl/list.html
+++ b/swablu/tpl/list.html
@@ -8,6 +8,7 @@
         <label>Type: <select name="type">
               <option value="">---</option>
               <option value="balance_hack">Balance Hack</option>
+              <option value="gameplay_hack">Gameplay Hack</option>
               <option value="story_hack">Story Hack</option>
               <option value="translation">Translation</option>
               <option value="misc_hack">Misc. Hack</option>
